--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,22 @@
 services:
+#  api-gateway:
+#    container_name: api-gateway
+#    networks:
+#      - gateway-network
+#    ports:
+#      - "8080:8080"
+#    build:
+#      context: ./gateway
+#      dockerfile: Dockerfile
+#    restart: unless-stopped
+#    depends_on:
+#      - redis
+#      - loki
+#      - grafana
+#      - prometheus
+#      - user-service
+#      - payment-service
+#      - product-service
   redis:
     image: redis:7.4-alpine
     container_name: redis
@@ -26,7 +44,7 @@ services:
     restart: unless-stopped
     command: -config.file=/etc/loki/local-config.yaml
     volumes:
-      - ./loki-config.yaml:/etc/loki/local-config.yaml
+      - ./loki-config.yml:/etc/loki/local-config.yaml
       - loki-data:/loki
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3100/ready"]
@@ -49,7 +67,7 @@ services:
     restart: unless-stopped
     volumes:
       - grafana-data:/var/lib/grafana
-      - ./grafana-datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+      - ./grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yaml
     depends_on:
       - loki
     healthcheck:
