--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -53,8 +53,8 @@
         </dependency>
         <dependency>
             <groupId>org.redisson</groupId>
-            <artifactId>redisson-spring-boot-starter</artifactId>
-            <version>3.36.0</version>
+            <artifactId>redisson</artifactId>
+            <version>4.1.0</version>
         </dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
