--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -52,6 +52,10 @@
             <version>${bucket4j.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>4.1.0</version>
