--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -1,10 +1,11 @@
 spring:
   application:
     name: api-gateway-circuitbreaker
-  redis:
-    host: localhost
-    port: 6379
-    password: admin
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password: admin
 
 management:
   health:
