--- a/gateway/src/main/resources/application-dev.yaml
+++ b/gateway/src/main/resources/application-dev.yaml
@@ -3,7 +3,7 @@ spring:
     name: api-gateway-circuitbreaker
   data:
     redis:
-      host: redis
+      host: localhost
       port: 6379
       password: ""
 management:
@@ -47,16 +47,16 @@ management:
   otlp:
     metrics:
       export:
-        url: http://grafana-lgtm:4318/v1/metrics
+        url: http://localhost:4318/v1/metrics
   opentelemetry:
     tracing:
       export:
         otlp:
-          endpoint: http://grafana-lgtm:4318/v1/traces
+          endpoint: http://localhost:4318/v1/traces
     logging:
       export:
         otlp:
-          endpoint: http://grafana-lgtm:4318/v1/logs
+          endpoint: http://localhost:4318/v1/logs
 
 resilience4j:
   circuitbreaker:
@@ -80,8 +80,8 @@ resilience4j:
         max-attempts: 3
         wait-duration: "2s"
 loki:
-  url: ${loki_url:http://loki:3100/loki/api/v1/push}
+  url: ${loki_url:http://localhost:3100/loki/api/v1/push}
 routes:
-  payment-service: ${payment_service_url:http://payment-service:80}
-  product-catalog-service: ${product_catalog_service_url:http://product-service:80}
-  user-service: ${user_service_url:http://user-service:80}
+  payment-service: ${payment_service_url:http://localhost:8082}
+  product-catalog-service: ${product_catalog_service_url:http://localhost:8083}
+  user-service: ${user_service_url:http://localhost:8081}
